--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.1.0",
-    "less": "^2.7.2",
+    "less": "^3.8.0",
     "less-loader": "^4.1.0",
     "md5": "^2.2.1",
     "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "4.9.0",
+    "node-sass": "^4.9.2",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-social-icons": "^2.8.1",
@@ -39,8 +39,8 @@
     "style-loader": "0.20.3",
     "url-loader": "^1.0.1",
     "webpack": "^4.4.1",
-    "webpack-cli": "^2.0.13",
-    "webpack-dev-server": "^3.1.1",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5",
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
